--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ maintainers = [
 ]
 license = { file = "LICENSE"}
 keywords = ["ONNX", "YOLOv8", "onnxruntime", "vision"]
-requires-python = ">3.8,<3.11.0"
+requires-python = ">=3.8,<3.11"
 dependencies = [
     "numpy>=1.20",
     "Pillow>=9.1.0",
